# ToukeAgent

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
config/: generation-judge-cases.json  memory-benchmark-cases.json  model-config.example.json  paper-source-catalog.json  retrieval-benchmark-cases-security-noise.json  retrieval-benchmark-cases.json  retrieval-benchmark-gold-cases-snippet-v1.json  retrieval-benchmark-gold-cases-snippet-v2.json  retrieval-benchmark-gold-cases.json  retrieval-benchmark-hard-negative-cases.json  retrieval-benchmark-hard-negative-gold-cases.json  retrieval-benchmark-scaleout-cases.json  wiki-freshness-cases.json  wiki-project-cases.json  wiki-trigma-cases.json
docs/: development-playbook.md  engineering-manual.md  framework-next-steps.md  knowledge-corpus-playbook.md  open-source-release-checklist.md  toukeagent-main-architecture.md
scripts/: approval_recovery_smoke.py  benchmark_memory_quality.py  benchmark_retrieval_quality.py  build_paper_index.py  collect_papers.py  delivery_smoke.py  evaluate_generation_quality.py  evaluate_knowledge_quality.py  evaluate_wiki_quality.py  ingest_papers.py  inspect_chunk_quality.py  live_smoke.py  mine_confusable_negatives.py  rebuild_paper_corpus.py  restart_recovery_smoke.py  runtime_doctor.py  stream_reconnect_smoke.py  stream_smoke.py  wiki_first_smoke.py  wiki_notes_audit.mjs
tests/: async-worker.test.mjs  contracts.test.mjs  deepseek-client.test.mjs  evaluation-harness.test.mjs  generation-eval-harness.test.mjs  governance-monitor.test.mjs  (+42 more)
(+133 files in other folders)
